force-app/main/default/objects/Account/fields/Account_Ref_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Ref_Code_1__c</fullName>
    <label>Account Ref Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>