force-app/main/default/objects/Account/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>