force-app/main/default/objects/Account/fields/Dental_Association_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Dental_Association_Member_ID__c</fullName>
    <description>This is to indicate the Dental Association Member Identifications the account is associated to.</description>
    <inlineHelpText>The associated Dental Association Member Identifications to this account.</inlineHelpText>
    <label>Dental Association Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>