force-app/main/default/objects/Account/fields/Est_Annual_Income_LCY__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Income_LCY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Est Annual Income (LCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>