force-app/main/default/objects/Account/fields/From_Lead_Convert__c.field-meta.xml
<CustomField>
    <fullName>From_Lead_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Lead Convert</label>
    <type>Checkbox</type>
</CustomField>