force-app/main/default/objects/Account/fields/No_of_Chairs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Chairs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Chairs</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>