force-app/main/default/objects/Account/fields/Opt_for_Auto_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_for_Auto_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt for Auto Email</label>
    <type>Checkbox</type>
</CustomField>