force-app/main/default/objects/Account/fields/Shipping_Blk_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Blk_No__c</fullName>
    <label>Shipping Blk No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>