force-app/main/default/objects/Account/fields/Shipping_District__c.field-meta.xml
<CustomField>
    <fullName>Shipping_District__c</fullName>
    <label>Shipping District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>