force-app/main/default/objects/Account/fields/Shipping_Same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Same_as_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>