force-app/main/default/objects/Account/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <label>Specialisation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>Analog</fullName>
            </value>
            <value>
                <fullName>CAD/CAM Digital</fullName>
            </value>
            <value>
                <fullName>Ceramist</fullName>
            </value>
            <value>
                <fullName>Dental Technician</fullName>
            </value>
            <value>
                <fullName>Endodontics</fullName>
            </value>
            <value>
                <fullName>Fixed Prosthetics</fullName>
            </value>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>Implantology</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Medicine &amp; Radiology</fullName>
            </value>
            <value>
                <fullName>Metalleogist</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Operative/Restorative</fullName>
            </value>
            <value>
                <fullName>Oral &amp; Maxillofacial</fullName>
            </value>
            <value>
                <fullName>Oral Pathology</fullName>
            </value>
            <value>
                <fullName>Orthodontics</fullName>
            </value>
            <value>
                <fullName>Paediatric Dentistry</fullName>
            </value>
            <value>
                <fullName>Periodontics</fullName>
            </value>
            <value>
                <fullName>Plaster/Wax</fullName>
            </value>
            <value>
                <fullName>Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Public Health</fullName>
            </value>
            <value>
                <fullName>Removal Dentures</fullName>
            </value>
            <value>
                <fullName>Special Needs Dentistry</fullName>
            </value>
            <value>
                <fullName>Pedodontics</fullName>
                <isActive>false</isActive>
                <label>Pedodontics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>