force-app/main/default/objects/Account/validationRules/area_country_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>area_country_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Area__c) &lt;&gt; &quot;UN-Unknown&quot;,
OR(
    ISBLANK(BillingCountry),
    AND(
        BillingCountry = &quot;Australia&quot;,
        NOT(
            OR(
                LEFT(TEXT(Area__c), 2) = &quot;AU&quot;,
                LEFT(TEXT(Area__c), 2) = &quot;NZ&quot;
            )
        )
    ),
    AND(
        BillingCountry  &lt;&gt; &quot;Australia&quot;,
        LEFT(TEXT(Area__c), 2) &lt;&gt;
            CASE(
                BillingCountry,
                &quot;Brunei Darussalam&quot;, &quot;BN&quot;,
                &quot;Indonesia&quot;, &quot;ID&quot;,
                &quot;India&quot;, &quot;IN&quot;,
                &quot;Malaysia&quot;, &quot;MY&quot;,
                &quot;New Zealand&quot;, &quot;NZ&quot;,
                &quot;Philippines&quot;, &quot;PH&quot;,
                &quot;Singapore&quot;, &quot;SG&quot;,
                &quot;Thailand&quot;, &quot;TH&quot;,
                &quot;Vietnam&quot;, &quot;VN&quot;, 
                &quot;Afghanistan&quot;, &quot;AF&quot;,
                &quot;Cambodia&quot;, &quot;KH&quot;,
                &quot;Lao People&apos;s Democratic Republic&quot;, &quot;LA&quot;,
                &quot;Myanmar&quot;, &quot;MM&quot;,
                &quot;Pakistan&quot;, &quot;PK&quot;,
                &quot;&quot;
            )
    )
)
)</errorConditionFormula>
    <errorDisplayField>Area__c</errorDisplayField>
    <errorMessage>Please assign the correct area of the country</errorMessage>
</ValidationRule>