force-app/main/default/objects/Account/validationRules/Billing_Address_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_is_Mandatory</fullName>
    <active>true</active>
    <description>To make billing address components required</description>
    <errorConditionFormula>(
ISBLANK(BillingStreet) || ISBLANK(BillingCity) || ISBLANK(BillingState) || ISBLANK(BillingPostalCode) || ISBLANK(BillingCountry)
) ||
(
!From_Lead_Convert__c &amp;&amp; !Shipping_Same_as_Billing_Address__c  &amp;&amp; (ISBLANK(ShippingStreet) || ISBLANK(ShippingCity) || ISBLANK(ShippingState) || ISBLANK(ShippingPostalCode) || ISBLANK(ShippingCountry))
)</errorConditionFormula>
    <errorMessage>Please fill up all of the account billing and shipping address details such as Street, City, Country, State/Province, and Postal Code</errorMessage>
</ValidationRule>