force-app/main/default/objects/Account/validationRules/Email_Mandatory_if_Auto_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Mandatory_if_Auto_True</fullName>
    <active>true</active>
    <description>To make Email 1 field mandatory if Send Auto Email equals true</description>
    <errorConditionFormula>Opt_for_Auto_Email__c == true &amp;&amp;  Email_1__c == null</errorConditionFormula>
    <errorDisplayField>Email_1__c</errorDisplayField>
    <errorMessage>Please populate the email if you select Send Auto Email</errorMessage>
</ValidationRule>