force-app/main/default/objects/Account/validationRules/phone_2_format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_2_format_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Phone_Number_2__c)) &amp;&amp; NOT(REGEX(Phone_Number_2__c, &quot;^[0-9]+$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_Number_2__c</errorDisplayField>
    <errorMessage>Phone number can only contain digits, no spaces or special characters.</errorMessage>
</ValidationRule>