force-app/main/default/objects/Account/listViews/inActive_Accounts.listView-meta.xml
<ListView>
    <fullName>inActive_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Owner_Name__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Email_1__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Category__c</columns>
    <columns>Account_Classification__c</columns>
    <columns>Specialisation__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Accounts</label>
</ListView>