force-app/main/default/objects/Account/listViews/New_Accounts_Past_Week.listView-meta.xml
<ListView>
    <fullName>New_Accounts_Past_Week</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Owner_Name__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Email_1__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Category__c</columns>
    <columns>Account_Classification__c</columns>
    <columns>Specialisation__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>New Accounts Past Week</label>
</ListView>